--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "devDependencies": {
-    "cypress": "^13.6.6"
+    "cypress": "^13.6.6",
+    "cypress-mochawesome-reporter": "^3.8.2"
+  },
+  "scripts": {
+    "test": "cypress run",
+    "test:headless": "cypress run --headless"
   }
 }
