--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "cypress-mochawesome-reporter": "^3.8.2"
   },
   "scripts": {
-    "test": "cypress run",
-    "test:headless": "cypress run --headless"
+    "test": "cypress run --headless --browser chrome"
   }
 }
