--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "devDependencies": {
-    "cypress": "^13.6.6",
-    "cypress-mochawesome-reporter": "^3.8.2"
+    "cypress": "^13.6.6"
   },
   "scripts": {
     "test": "cypress run --headless --browser chrome"
