--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "cypress": "^13.6.6"
   },
   "scripts": {
-    "test": "cypress run --headless --browser chrome"
+    "test": "cypress run --headless --browser chrome",
+    "remove-results": "rm -rf cypress/screenshots/* && rm -rf cypress/videos/*"
   }
 }
