--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "devDependencies": {
-    "cypress": "^13.6.6"
+    "cypress": "^13.6.6",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.3.0",
+    "mochawesome-report-generator": "^6.2.0"
   },
   "scripts": {
-    "test": "cypress run --headless --browser chrome",
-    "remove-results": "rm -rf cypress/screenshots/* && rm -rf cypress/videos/*"
+    "test": "npx cypress run --headless --browser chrome",
+    "remove-results": "rm -rf cypress/results/* || true && rm -rf mochawesome-report/* || true && rm -rf mochawesome.json",
+    "merge-report": "npx mochawesome-merge cypress/results/*.json > mochawesome.json",
+    "create-report": "npx marge mochawesome.json",
+    "regression-test": "npm run remove-results && npm run test && npm run merge-report && npm run create-report"
   }
 }
